--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,16 @@ services:
       - 3000
     ports:
       - 3000:3000
-    # depends_on:
-    #   - pg
-    # command: bash -c 'yarn migration:run && yarn dev'
+    depends_on:
+      - db
+    command: bash -c 'yarn migration:run && yarn dev'
     command: bash -c 'yarn dev'
-  # pg:
-  #   container_name: projectApiPg
-  #   image: postgres
-  #   env_file:
-  #     - .env
-  #   expose:
-  #     - 5432
-  #   ports:
-  #     - 5432:5432
+  db:
+    container_name: projectApiPg
+    image: postgres
+    env_file:
+      - .env
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
